feat(BA-3380): Add RBAC types and infrastructure (#7416)
